Global inspections: use a bit less memory because most methods that have a super method have only one
GitOrigin-RevId: 6fe915be7a38bd4083e913b82b11a335267f5b5e